pool deal new fields